deployment-k8s/sawtooth/k8s-single/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sawtooth-0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: sawtooth-0
    spec:
      containers:
        - name: sawtooth-devmode-engine
          image: hyperledger/sawtooth-devmode-engine-rust:1.1
          command:
            - bash
          args:
            - -c
            - 'devmode-engine-rust -C tcp://$HOSTNAME:5050'

        - name: sawtooth-settings-tp
          image: hyperledger/sawtooth-settings-tp:1.1
          command:
            - bash
          args:
            - -c
            - 'settings-tp -vv -C tcp://$HOSTNAME:4004'

        - name: sawtooth-intkey-tp-python
          image: hyperledger/sawtooth-intkey-tp-python:1.1
          command:
            - bash
          args:
            - -c
            - 'intkey-tp-python -vv -C tcp://$HOSTNAME:4004'

        - name: sawtooth-validator
          image: hyperledger/sawtooth-validator:1.1
          ports:
            - name: tp
              containerPort: 4004
            - name: consensus
              containerPort: 5050
            - name: validators
              containerPort: 8800
          command:
            - bash
          args:
            - -c
            - "sawadm keygen \
              && sawtooth keygen my_key \
              && sawset genesis -k /root/.sawtooth/keys/my_key.priv \
              && sawset proposal create \
              -k /root/.sawtooth/keys/my_key.priv \
              sawtooth.consensus.algorithm.name=Devmode \
              sawtooth.consensus.algorithm.version=0.1 \
              -o config.batch \
              && sawadm genesis config-genesis.batch config.batch \
              && sawtooth-validator -vv \
              --endpoint tcp://$SAWTOOTH_0_SERVICE_HOST:8800 \
              --bind component:tcp://eth0:4004 \
              --bind consensus:tcp://eth0:5050 \
              --bind network:tcp://eth0:8800"

        - name: sawtooth-rest-api
          image: hyperledger/sawtooth-rest-api:1.1
          ports:
            - name: api
              containerPort: 8008
          command:
            - bash
          args:
            - -c
            - 'sawtooth-rest-api -C tcp://$HOSTNAME:4004 --bind 0.0.0.0:8008'

        - name: sawtooth-shell
          image: hyperledger/sawtooth-shell:1.1
          command:
            - bash
          args:
            - -c
            - 'sawtooth keygen && tail -f /dev/null'

        - name: hexchainiot-tp
          image: ancs21/hexchainiot-tp:0.0.1
          command:
            - bash
          args:
            - -c
            - 'yarn start'

        - name: hexchainiot-ledger-sync
          image: ancs21/hexchainiot-ledger-sync:0.0.1
          command:
            - bash
          args:
            - -c
            - 'yarn start'
